# frontend

./: .env.development  .env.production  .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Dockerfile  README.md  architecture.md  build-android.sh  crt.pem  dioxus-vs-flutter.md  fix-android-env.sh  index.html  input.css  install.md  package.json  roadmap.md  run-android.sh  spin.sig  spin.toml  tag-info.txt  tailwind.config.js  vercel.json  wrangler.toml
.cargo/: config.toml
.github/workflows/: android-build.yml  build-android.yml  build-docker.yml  build-ios.yml  build-web.yml  cloudflare-pages.yml  deploy-dev.yml  deploy-download-page.yml  deploy-download.yml  dev-deployment.yml  frontend-build-push.yml  ios-build.yml  release-and-deploy.yml  release-github.yml  release.yml  update-version.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
archive/tree/: family_member.rs
artifacts/web/: index.html
artifacts/web/assets/: djibon-498cc7dafba7f482.js  error.html  manifest.json  style.css  sw.js
artifacts/web/wasm/: djibon.js  djibon_bg.wasm
assets/: cytoscape-dagre.min.js  main.css  manifest.json  sw.js  tailwind.css
assets/bootstrap/: bootstrap-icons.css
dioxus-test/: Cargo.toml  Dioxus.toml  index.html  spin.toml  wrangler.toml
dioxus-test/public/: style.css
dioxus-test/src/: main.rs  routes.rs  state.rs
dioxus-test/src/components/: bottom_nav.rs  circles.rs  comms.rs  home.rs  mod.rs  navbar.rs  profile.rs  settings.rs  system_info.rs  tree.rs
docker/: Caddyfile
download-page/: 404.html  index.html  server.js  wrangler.toml
public/: error.html  index.html  manifest.json  style.css  sw.js
public/assets/: main.css
src/: main.rs  routes.rs  state.rs
src/components/: avatar.rs  bottom_nav.rs  circles.rs  comms.rs  error_boundary.rs  footer.rs  header.rs  home.rs  logo.rs  main_layout.rs  messages.rs  mod.rs  navbar.rs  profile.rs  settings.rs  sidebar.rs  system_info.rs  tree.rs  trees.rs
src/components/tree/: add_relative_modal.rs  family_section.rs  mod.rs  tree.rs  tree_styles.rs
src/layouts/: main_layout.rs  mobile_layout.rs  mod.rs
src/pages/: circles.rs  home.rs  messages.rs  mod.rs  profile.rs  settings.rs  trees.rs
src/routes/: mod.rs
src/services/: mod.rs  websocket_service.rs
