[package]
name = "jiboni"
version = "0.0.5"
authors = ["wizard supreme <smn7818@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "signals"] }
log = "0.4.27"

# Platform-specific dependencies
# Web dependencies
wasm-logger = { version = "0.2.0", optional = true }

# Mobile and desktop dependencies
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:wasm-logger"]
mobile = ["dioxus/mobile", "dep:tracing", "dep:tracing-subscriber"]
desktop = ["dioxus/desktop", "dep:tracing", "dep:tracing-subscriber"]

[profile]

# [profile.release]
# lto = true
# opt-level = 'z'

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incrementals = true
codegen-units = 256
rpath = false

[profile.android-release]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incrementals = false
codegen-units = 16
rpath = false
